# Chunker

./: .gitignore  LICENSE  README.md  chunk.py  cluster_report.csv  clustering_history.csv  example_usage.py  face.py  hierarchical_summaries.csv  ingest.py  mk2.py  mk3.py  pyproject.toml  requirements.txt  reset_db.py  run_test.py  setup.py  simple_ingest.py  test_imports.py  test_ingest.py  test_init.py
chroma_db/: chroma.sqlite3
chunker/: __init__.py  chunk.py  config.py  face.py  fixed_chunk.py  logger.py  mk3.py  validators.py
hierarchical_chroma_db/: chroma.sqlite3
hierarchical_chroma_db/7fdb0505-ec17-4cc3-b51f-7ffab6cb82ea/: index_metadata.pickle
