[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chunker-rag"
version = "1.0.0"
description = "Hierarchical document clustering and semantic RAG system with Ollama integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Chunker Contributors"}]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "clustering",
    "semantic-search",
    "ollama",
    "chromadb",
    "embeddings",
    "document-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "chromadb>=0.4.10",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "requests>=2.31.0",
    "urllib3>=2.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "pylint>=2.17.0",
]
pdf = [
    "PyPDF2>=3.0.0",
    "python-pptx>=0.6.21",
    "python-docx>=0.8.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/chunker"
Documentation = "https://github.com/yourusername/chunker/blob/main/README.md"
Repository = "https://github.com/yourusername/chunker.git"
Issues = "https://github.com/yourusername/chunker/issues"

[tool.setuptools]
packages = ["chunker"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = ["C0111", "W0212"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
